--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>gridcapa-swe-runner-api</module>
         <module>gridcapa-swe-runner-app</module>
         <module>gridcapa-swe-runner-starter</module>
+        <module>gridcapa-swe-commons</module>
     </modules>
 
     <scm>
@@ -72,11 +73,6 @@
     <dependencyManagement>
         <dependencies>
             <!-- Compile dependencies -->
-            <dependency>
-                <groupId>com.farao-community.farao</groupId>
-                <artifactId>gridcapa-swe-commons</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
-            </dependency>
             <dependency>
                 <groupId>com.farao-community.farao</groupId>
                 <artifactId>farao-dichotomy-api</artifactId>
