--- a/gridcapa-swe-runner-app/pom.xml
+++ b/gridcapa-swe-runner-app/pom.xml
@@ -42,8 +42,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.farao-community.farao</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>gridcapa-swe-commons</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.farao-community.farao</groupId>
