--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.22.0</farao.dependencies.version>
+        <farao.dependencies.version>1.22.1-SNAPSHOT</farao.dependencies.version>
         <farao.dichotomy.version>4.14.0</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.1</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.19.1</gridcapa.rao.runner.version>
