Export valid cgm modeling authority

--- a/gridcapa-swe-commons/src/test/resources/application.yml
+++ b/gridcapa-swe-commons/src/test/resources/application.yml
@@ -5,3 +5,4 @@ spring:
 swe-commons:
   zone-id: "Europe/Paris"
   shift-max-iteration-number: 20
+  modeling-authority-set: "https://farao-community.github.io/"
