Export valid cgm modeling authority fix forgotten properties change

--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -42,25 +42,25 @@ swe-runner:
     parameters:
       ES_FR:
         min-value: 0
-        max-value: 50
+        max-value: 6400
         precision: 50
         tolerance-Es-Fr: 10
         tolerance-Es-Pt: 50
       FR_ES:
         min-value: 0
-        max-value: 50
+        max-value: 6400
         precision: 50
         tolerance-Es-Fr: 10
         tolerance-Es-Pt: 50
       ES_PT:
         min-value: 0
-        max-value: 50
+        max-value: 6400
         precision: 50
         tolerance-Es-Fr: 50
         tolerance-Es-Pt: 10
       PT_ES:
         min-value: 0
-        max-value: 50
+        max-value: 6400
         precision: 50
         tolerance-Es-Fr: 50
         tolerance-Es-Pt: 10
@@ -79,4 +79,4 @@ minio-adapter:
   base-path: /SWE/D2CC
   access-key: gridcapa
   secret-key: gridcapa
-  url: http://minio:9000
+  url: http://localhost:9000
