Export valid cgm modeling authority (#170)
* Export valid cgm modeling authority

* Export valid cgm modeling authority fix forgotten properties change

* fix code changes

---------

Co-authored-by: SCHWITZGUEBEL Marc Ext <schwitzguebelmar@rte-france.com>

--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -35,6 +35,7 @@ logback:
 swe-commons:
   zone-id: "Europe/Paris"
   shift-max-iteration-number: 20
+  modeling-authority-set: "https://farao-community.github.io/"
 
 swe-runner:
   dichotomy:
