Update with open-rao 5.1.0-SNAPSHOT

--- a/gridcapa-swe-commons/pom.xml
+++ b/gridcapa-swe-commons/pom.xml
@@ -62,8 +62,8 @@
             <artifactId>powsybl-iidm-modification</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.farao-community.farao</groupId>
-            <artifactId>farao-crac-io-api</artifactId>
+            <groupId>com.powsybl</groupId>
+            <artifactId>open-rao-crac-io-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
