WIP : change auuthoriy model values

--- a/gridcapa-swe-commons/src/test/resources/application.yml
+++ b/gridcapa-swe-commons/src/test/resources/application.yml
@@ -5,4 +5,8 @@ spring:
 swe-commons:
   zone-id: "Europe/Paris"
   shift-max-iteration-number: 20
-  modeling-authority-set: "https://farao-community.github.io/"
+  modeling-authority-set:
+    REE: "http://www.ree.es/OperationalPlanning"
+    REN: "http://www.ren.pt/OperationalPlanning"
+    RTE: "http://www.rte-france.com/OperationalPlanning"
+    SV: "http://www.coreso.eu/OperationalPlanning"
