--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -7,9 +7,13 @@ spring:
     name: swe-d2cc-runner
 
 swe-commons:
-  shift-max-iteration-number: 20
   zone-id: "Europe/Paris"
-  modeling-authority-set: "https://farao-community.github.io/"
+  shift-max-iteration-number: 20
+  modeling-authority-set:
+    REE: "http://www.ree.es/OperationalPlanning"
+    REN: "http://www.ren.pt/OperationalPlanning"
+    RTE: "http://www.rte-france.com/OperationalPlanning"
+    SV: "http://www.coreso.eu/OperationalPlanning"
 
 swe-runner:
   dichotomy:
