--- a/gridcapa-swe-commons/src/test/resources/application.yml
+++ b/gridcapa-swe-commons/src/test/resources/application.yml
@@ -8,5 +8,5 @@ swe-commons:
   modeling-authority-set:
     REE: "http://www.ree.es/OperationalPlanning"
     REN: "http://www.ren.pt/OperationalPlanning"
-    RTE: "http://www.rte-france.com/OperationalPlanning"
+    RTEFRANCE: "http://www.rte-france.com/OperationalPlanning"
     SV: "http://www.coreso.eu/OperationalPlanning"
