fixes following remarks

--- a/gridcapa-swe-commons/src/test/resources/application.yml
+++ b/gridcapa-swe-commons/src/test/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 swe-commons:
   zone-id: "Europe/Paris"
   shift-max-iteration-number: 20
-  modeling-authority-set:
+  modeling-authority-map:
     REE: "http://www.ree.es/OperationalPlanning"
     REN: "http://www.ren.pt/OperationalPlanning"
     RTEFRANCE: "http://www.rte-france.com/OperationalPlanning"
