--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 swe-commons:
   zone-id: "Europe/Paris"
   shift-max-iteration-number: 20
-  modeling-authority-set:
+  modeling-authority-map:
     REE: "http://www.ree.es/OperationalPlanning"
     REN: "http://www.ren.pt/OperationalPlanning"
     RTE: "http://www.rte-france.com/OperationalPlanning"
