--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <farao.dependencies.version>1.22.1-SNAPSHOT</farao.dependencies.version>
         <farao.dichotomy.version>4.14.1-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.1</gridcapa.starter.minio.version>
-        <gridcapa.rao.runner.version>1.19.1</gridcapa.rao.runner.version>
+        <gridcapa.rao.runner.version>1.19.2-SNAPSHOT</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.23.0</gridcapa.task-manager.version>
         <jackson.datatype.version>2.13.4</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
