avoid hard coded pst ids

--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -16,6 +16,9 @@ swe-commons:
     SV: "http://www.coreso.eu/OperationalPlanning"
 
 swe-runner:
+  pst:
+    pst1-id: _e071a1d4-fef5-1bd9-5278-d195c5597b6e
+    pst2-id: _7824bc48-fc86-51db-8f9c-01b44933839e
   dichotomy:
     parameters:
       ES_FR:
