--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>farao-parent-ws</artifactId>
         <groupId>com.farao-community.farao</groupId>
-        <version>1.7.0</version>
+        <version>1.8.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>gridcapa-swe</artifactId>
@@ -58,12 +58,12 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.26.0</farao.dependencies.version>
-        <farao.dichotomy.version>4.14.2</farao.dichotomy.version>
-        <gridcapa.starter.minio.version>1.1.1</gridcapa.starter.minio.version>
-        <gridcapa.rao.runner.version>1.19.1</gridcapa.rao.runner.version>
-        <gridcapa.task-manager.version>1.25.0</gridcapa.task-manager.version>
-        <jackson.datatype.version>2.13.4</jackson.datatype.version>
+        <farao.dependencies.version>1.27.0-SNAPSHOT</farao.dependencies.version>
+        <farao.dichotomy.version>4.15.0-SNAPSHOT</farao.dichotomy.version>
+        <gridcapa.starter.minio.version>1.1.2-SNAPSHOT</gridcapa.starter.minio.version>
+        <gridcapa.rao.runner.version>1.21.0-SNAPSHOT</gridcapa.rao.runner.version>
+        <gridcapa.task-manager.version>1.26.1-SNAPSHOT</gridcapa.task-manager.version>
+        <jackson.datatype.version>2.17.0</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
         <logstash.version>7.0.1</logstash.version>
         <sonar.organization>farao-community</sonar.organization>
@@ -108,7 +108,10 @@
                 <artifactId>jsonapi-converter</artifactId>
                 <version>${jsonapi.converter.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+            </dependency>
             <!-- Runtime dependencies -->
             <dependency>
                 <groupId>net.logstash.logback</groupId>
@@ -116,7 +119,11 @@
                 <version>${logstash.version}</version>
                 <scope>runtime</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <scope>runtime</scope>
+            </dependency>
             <!-- Test dependencies -->
             <dependency>
                 <groupId>org.awaitility</groupId>
