--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,10 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.28.1</farao.dependencies.version>
-        <farao.dichotomy.version>4.16.1</farao.dichotomy.version>
+        <!--        TODO delete SNAPSHOT once released-->
+        <farao.dependencies.version>1.29.0-SNAPSHOT</farao.dependencies.version>
+        <!--        TODO delete SNAPSHOT once released-->
+        <farao.dichotomy.version>4.17.0-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.2</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.22.1</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.26.1</gridcapa.task-manager.version>
