--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,7 @@
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.29.0</farao.dependencies.version>
-        <!--        TODO delete SNAPSHOT once released-->
-        <farao.dichotomy.version>4.17.0-SNAPSHOT</farao.dichotomy.version>
+        <farao.dichotomy.version>4.17.0</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.2</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.22.1</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.26.1</gridcapa.task-manager.version>
