--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,9 @@
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.28.1</farao.dependencies.version>
-        <farao.dichotomy.version>4.17.0-SNAPSHOT</farao.dichotomy.version>
+        <farao.dichotomy.version>4.17.0</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.2</gridcapa.starter.minio.version>
-        <gridcapa.rao.runner.version>1.23.0-SNAPSHOT</gridcapa.rao.runner.version>
+        <gridcapa.rao.runner.version>1.23.0</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.26.1</gridcapa.task-manager.version>
         <jackson.datatype.version>2.17.0</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
