Accept list for pst regulation config

--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -43,8 +43,10 @@ swe-commons:
 
 swe-runner:
   pst:
-    pst1-id: _e071a1d4-fef5-1bd9-5278-d195c5597b6e
-    pst2-id: _7824bc48-fc86-51db-8f9c-01b44933839e
+    pst-ids:
+      - _e071a1d4-fef5-1bd9-5278-d195c5597b6e
+      - _7824bc48-fc86-51db-8f9c-01b44933839e
+      - _f82152ac-578e-500e-97db-84e788c471ee
   unoptimized-cnecs-with-pst-es-fr:
     active : false
   dichotomy:
