--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -16,35 +16,24 @@ swe-commons:
     SV: "http://www.coreso.eu/OperationalPlanning"
 
 swe-runner:
-  pst:
-    pst1-id: _e071a1d4-fef5-1bd9-5278-d195c5597b6e
-    pst2-id: _7824bc48-fc86-51db-8f9c-01b44933839e
   unoptimized-cnecs-with-pst-es-fr:
     active: true
+  pst:
+    pst-ids:
+      - _e071a1d4-fef5-1bd9-5278-d195c5597b6e
+      - _7824bc48-fc86-51db-8f9c-01b44933839e
   dichotomy:
     parameters:
       ES_FR:
-        min-value: 0
-        max-value: 6400
-        precision: 50
         tolerance-Es-Fr: 10
         tolerance-Es-Pt: 50
       FR_ES:
-        min-value: 0
-        max-value: 6400
-        precision: 50
         tolerance-Es-Fr: 10
         tolerance-Es-Pt: 50
       ES_PT:
-        min-value: 0
-        max-value: 6400
-        precision: 50
         tolerance-Es-Fr: 50
         tolerance-Es-Pt: 10
       PT_ES:
-        min-value: 0
-        max-value: 6400
-        precision: 50
         tolerance-Es-Fr: 50
         tolerance-Es-Pt: 10
   whitelist:
