WIP begining implementation for swe

--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -38,6 +38,7 @@ swe-runner:
   whitelist:
     - http://localhost:9000/
     - file:/
+  interrupt-server-url: http://testUrl/interrupted/
 
 minio-adapter:
   bucket: gridcapa
