--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -12,7 +12,7 @@ swe-commons:
   modeling-authority-map:
     REE: "http://www.ree.es/OperationalPlanning"
     REN: "http://www.ren.pt/OperationalPlanning"
-    RTE: "http://www.rte-france.com/OperationalPlanning"
+    RTEFRANCE: "http://www.rte-france.com/OperationalPlanning"
     SV: "http://www.coreso.eu/OperationalPlanning"
 
 swe-runner:
