--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.33.0</farao.dependencies.version>
-        <farao.dichotomy.version>4.18.0</farao.dichotomy.version>
+        <farao.dichotomy.version>4.18.1-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.2</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.24.1-SNAPSHOT</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.28.0</gridcapa.task-manager.version>
