--- a/gridcapa-swe-runner-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/gridcapa-swe-runner-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -14,6 +14,11 @@
       "name": "swe-commons.zone-id",
       "type": "java.lang.String",
       "description": "Description for swe-commons.zone-id."
+    },
+    {
+      "name": "swe-commons.fix-unrealistic-remote-voltage-target",
+      "type": "java.lang.Boolean",
+      "description": "Description for fix-unrealistic-remote-voltage-target."
     }
   ]
 }
