--- a/gridcapa-swe-runner-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/gridcapa-swe-runner-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -16,7 +16,7 @@
       "description": "Description for swe-commons.zone-id."
     },
     {
-      "name": "swe-commons.remove-remote-voltage-regulation-in-france",
+      "name": "swe-runner.data-fix.remove-remote-voltage-regulation-in-france",
       "type": "java.lang.Boolean",
       "description": "Description for remove-remote-voltage-regulation-in-france."
     }
