--- a/gridcapa-swe-runner-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/gridcapa-swe-runner-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,7 +18,7 @@
     {
       "name": "swe-runner.data-fix.remove-remote-voltage-regulation-in-france",
       "type": "java.lang.Boolean",
-      "description": "Description for remove-remote-voltage-regulation-in-france."
+      "description": "Enable or disable the removal of remote voltage regulation in France."
     }
   ]
 }
