Add preprocessing for making remote voltage target unconsistencies less impacting on OLF (#276)
* Add preprocessing for making remote voltage target unconsistencies less impacting on OLF

Signed-off-by: Sébastien MURGEY <sebastien.murgey@rte-france.com>

* Only apply pre-processing when file initially divergent

Signed-off-by: Sébastien MURGEY <sebastien.murgey@rte-france.com>

* Change network fix to remove remote voltage regulation

* Fix metadata

* Modifications after review

---------

Signed-off-by: Sébastien MURGEY <sebastien.murgey@rte-france.com>

--- a/gridcapa-swe-runner-app/src/test/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/test/resources/application.yml
@@ -16,6 +16,8 @@ swe-commons:
     SV: "http://www.coreso.eu/OperationalPlanning"
 
 swe-runner:
+  data-fix:
+    remove-remote-voltage-regulation-in-france: true
   pst:
     pst-ids:
       - twt-not-found-id
