--- a/gridcapa-swe-runner-app/src/main/resources/application.yml
+++ b/gridcapa-swe-runner-app/src/main/resources/application.yml
@@ -13,6 +13,8 @@ swe-commons:
     SV: "http://www.coreso.eu/OperationalPlanning"
 
 swe-runner:
+  network-export:
+    intermediate-network: false
   data-fix:
     remove-remote-voltage-regulation-in-france: false
   dichotomy:
