--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.34.0-SNAPSHOT</farao.dependencies.version>
+        <farao.dependencies.version>1.34.0</farao.dependencies.version>
         <farao.dichotomy.version>4.20.0-SNAPSHOT</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.1.2</gridcapa.starter.minio.version>
         <gridcapa.rao.runner.version>1.27.0-SNAPSHOT</gridcapa.rao.runner.version>
