--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,10 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.35.0</farao.dependencies.version>
+        <farao.dependencies.version>1.36.0-SNAPSHOT</farao.dependencies.version>
         <farao.dichotomy.version>4.22.0</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.3.0</gridcapa.starter.minio.version>
-        <gridcapa.rao.runner.version>1.30.0</gridcapa.rao.runner.version>
+        <gridcapa.rao.runner.version>1.31.0-SNAPSHOT</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.33.0</gridcapa.task-manager.version>
         <jackson.datatype.version>2.17.0</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
