--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -1,9 +1,9 @@
-name: CI - main
+name: CI - master
 
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.2.2
         with:
-          ref: main
+          ref: master
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4.5.0
