--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,11 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.38.0-SNAPSHOT</farao.dependencies.version>
-        <farao.dichotomy.version>4.22.0</farao.dichotomy.version>
-        <gridcapa.starter.minio.version>1.3.0</gridcapa.starter.minio.version>
-        <gridcapa.rao.runner.version>1.31.0-SNAPSHOT</gridcapa.rao.runner.version>
-        <gridcapa.task-manager.version>1.33.0</gridcapa.task-manager.version>
+        <farao.dependencies.version>1.38.0</farao.dependencies.version>
+        <farao.dichotomy.version>4.24.0</farao.dichotomy.version>
+        <gridcapa.starter.minio.version>1.4.0</gridcapa.starter.minio.version>
+        <gridcapa.rao.runner.version>1.33.0</gridcapa.rao.runner.version>
+        <gridcapa.task-manager.version>1.34.0</gridcapa.task-manager.version>
         <jackson.datatype.version>2.17.0</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
         <logstash.version>7.0.1</logstash.version>
@@ -114,11 +114,6 @@
                 <groupId>net.logstash.logback</groupId>
                 <artifactId>logstash-logback-encoder</artifactId>
                 <version>${logstash.version}</version>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.jaxb</groupId>
-                <artifactId>jaxb-runtime</artifactId>
                 <scope>runtime</scope>
             </dependency>
 
