--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,10 @@
 
     <properties>
         <awaitility.version>3.0.0</awaitility.version>
-        <farao.dependencies.version>1.38.2</farao.dependencies.version>
-        <farao.dichotomy.version>4.24.0</farao.dichotomy.version>
+        <farao.dependencies.version>1.39.0</farao.dependencies.version>
+        <farao.dichotomy.version>4.25.0</farao.dichotomy.version>
         <gridcapa.starter.minio.version>1.4.0</gridcapa.starter.minio.version>
-        <gridcapa.rao.runner.version>1.33.0</gridcapa.rao.runner.version>
+        <gridcapa.rao.runner.version>1.34.0-SNAPSHOT</gridcapa.rao.runner.version>
         <gridcapa.task-manager.version>1.34.0</gridcapa.task-manager.version>
         <jackson.datatype.version>2.17.0</jackson.datatype.version>
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
