--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     </developers>
 
     <properties>
+        <argLine /> <!-- required for java agent declaration, do not remove -->
         <awaitility.version>3.0.0</awaitility.version>
         <farao.dependencies.version>1.43.0</farao.dependencies.version>
         <farao.dichotomy.version>4.32.0</farao.dichotomy.version>
